[package]
name = "common-crawl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
bytes = "1.9.0"
chrono = "0.4.38"
flate2 = "1.0.35"
futures = "0.3.31"
indicatif = "0.17.9"
num_cpus = "1.16.0"
pin-project = "1.1.7"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
url = "2.5.4"
warc = "0.4.0"
