[package]
name = "common-crawl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
duckdb = { version = "1.1.1", features = ["bundled"] }
flate2 = "1.0.35"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1.41.1", features = ["full"] }
